@@ -1,4 +1,7 @@
 1998-12-10  Dieter Baron  <dillo@danbala.tuwien.ac.at>
 
+	* open_font.c (open_font): calculate weight from OS/2
+	usWeightClass.
+
 	* main.c: declare basename only if missing.
 
